# Phroggy

./: .env.example  LICENSE  README.md  playground.py  pyproject.toml  pytest.ini  vercel.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql-analysis.yml  python-app.yml
api/: webhook.py
bot/: dispatcher.py  main.py  set_bot_commands.py  states.py  storage.py
config/: __init__.py  secrets.py
core/handlers/callbacks/: callbacks.py
core/handlers/commands/: __init__.py  cmd_help.py  cmd_link_group.py  cmd_my_groups.py  cmd_scan_file.py  cmd_scan_url.py  cmd_start.py
core/handlers/commands/group_commands/: cmd_add_moderators.py  cmd_auto_delete.py  cmd_blacklist.py  cmd_blacklist_kw.py  cmd_history.py  cmd_id.py  cmd_notify.py  cmd_sensitivity.py
core/handlers/listeners/: message_listner.py
core/keyboards/: __init__.py  create.py
core/temp/documents/: file_52.txt
db/: defaults.py  groups.py  mongo.py  schemas.py  tokens.py  users.py
logger/: __init__.py  async_logger.py  logger.py
scripts/: build.sh  run.sh  setup.sh
services/: check.py  check_file.py  check_spam.py  check_url.py
spam_model/: SpamDetector.ipynb
tests/test_services/: test_check_file.py  test_check_url.py
utils/: __init__.py  extract_links.py  file_protection.py  hash_calc.py
